# utxray

./: .utxray.toml.example  CLAUDE.md  Cargo.toml  README.md  tx.signed
crates/utxray-cli/: Cargo.toml
crates/utxray-cli/src/: context.rs  main.rs
crates/utxray-cli/src/commands/: auto.rs  budget.rs  build.rs  cbor.rs  context_cmd.rs  diagnose.rs  env.rs  mod.rs  replay.rs  scaffold_cmd.rs  schema.rs  test.rs  test_sequence.rs  trace.rs  tx.rs  typecheck.rs  uplc.rs  utxo.rs
crates/utxray-cli/tests/: cli_auto_test.rs  cli_blueprint_test.rs  cli_budget_test.rs  cli_build_test.rs  cli_cbor_diff_test.rs  cli_cbor_test.rs  cli_diagnose_test.rs  cli_gen_context_test.rs  cli_replay_diff_test.rs  cli_replay_test.rs  cli_scaffold_test.rs  cli_schema_test.rs  cli_test_sequence_test.rs  cli_test_test.rs  cli_tx_simulate_test.rs  cli_tx_test.rs  cli_typecheck_test.rs  cli_uplc_test.rs  cli_utxo_diff_test.rs
crates/utxray-core/: Cargo.toml
crates/utxray-core/src/: auto.rs  blueprint.rs  budget.rs  build.rs  config.rs  env.rs  error.rs  gen_context.rs  lib.rs  output.rs  scaffold.rs  test_cmd.rs  test_sequence.rs  trace.rs  typecheck.rs  uplc.rs
crates/utxray-core/src/aiken/: cli.rs
crates/utxray-core/src/backend/: blockfrost.rs  mod.rs
crates/utxray-core/src/cbor/: decode.rs  diff.rs  encode.rs  mod.rs  redeemer_index.rs  schema.rs  script_data_hash.rs
crates/utxray-core/src/chain/: mod.rs  utxo_diff.rs
crates/utxray-core/src/diagnose/: classifier.rs  mod.rs
crates/utxray-core/src/replay/: bundle.rs  diff.rs  mod.rs  runner.rs
crates/utxray-core/src/tx/: builder.rs  cbor_builder.rs  mod.rs  signer.rs  simulator.rs  submitter.rs
docs/: command-manifest.md  coverage-matrix.md  deviations.md  master-prompt.md  phase-state.json  references.md  scaffold.md  spec-gaps.md  spec.md  validation-pipeline.md  verification-report.md  verification-result.json
scripts/: verify.sh
site/: README.md  astro.config.mjs  (+3 more)
(+31 files in other folders)
