[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
pallas-codec = "0.30"
pallas-primitives = "0.30"
pallas-crypto = "0.30"
pallas-addresses = "0.30"
pallas-traverse = "0.30"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
anyhow = "1"
thiserror = "2"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
which = "7"
toml = "0.8"
ed25519-dalek = { version = "2", features = ["std"] }
assert_cmd = "2"
predicates = "3"
