[package]
name = "utxray-core"
version.workspace = true
edition.workspace = true

[dependencies]
pallas-codec.workspace = true
pallas-crypto.workspace = true
pallas-primitives.workspace = true
pallas-traverse.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
anyhow.workspace = true
thiserror.workspace = true
hex.workspace = true
chrono.workspace = true
which.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"
